# aifirstdeliveryconsolidated

./: .publish-manifest.json  README.md  agents.yaml  implementation.md
.claude/: settings.json
.claude-plugin/: marketplace.json
design/: 00-overview.md  01-repo-structure.md  02-agent-skeleton.md  03-agent-inventory.md  04-workflow-gates.md  05-project-layout.md  06-templates.md  07-doc-rules.md  08-traceability.md  09-orchestration-patterns.md  10-aggregators.md  11-mcp-server.md  12-publish-pipeline.md  13-chat-ui.md  14-readme-conventions.md  15-verification.md  16-revision-history.md  17-command-doc-standard.md  README.md  audit-2026-05-14.md  backlog.md  (+1 more)
docs/: architecture.md  (+1 more)
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/dataflow-codegen/: README.md  pyproject.toml
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/dataflow-codegen/dataflow_codegen/: __init__.py  cli.py  dsl.py  generator.py  templates.py
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/dataflow-codegen/dataflow_codegen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/dataflow-codegen/tests/: test_generator.py
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/excel_to_json/: README.md  pyproject.toml
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/excel_to_json/excel_to_json/: __init__.py  cli.py  converter.py
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/excel_to_json/excel_to_json.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/excel_to_json/tests/: test_converter.py
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/validate-config/: README.md  pyproject.toml
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/validate-config/tests/: test_validate_config.py
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/validate-config/validate_config/: __init__.py  __main__.py  allowlist.py  cli.py  errors.py  output.py  rules.py  runner.py  schema_validator.py
reference/01-aifirstdelivery/tools/opex_integration_dm/tools/validate-config/validate_config.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+1508 files in other folders)
