[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-to-json"
version = "0.1.0"
description = "Converts the analyst-authored mapping workbook into /config/entities/*.json files."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "openpyxl>=3.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.scripts]
excel-to-json = "excel_to_json.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["excel_to_json*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
